--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,9 +4,9 @@
 
     <div class="form-actions">
       <%= f.button :submit, :class => "btn btn-primary" %>
-      <%= link_to "Home", root_path, :class => "btn" %>
+      <%= link_to "HOME", root_path, :class => "btn" %>
     </div>
 
 <% end %>
 
-<%= render partial: "category", collection: Category.all %>
+<%= render partial: "CATEGORY", collection: Category.all %>
