--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -11,7 +11,7 @@
 
   <div class="form-actions">
     <%= f.submit :class => "btn btn-primary" %>
-    <%= link_to "Back", root_path, :class => "btn" %>
+    <%= link_to "BACK", root_path, :class => "btn" %>
   </div>
 
 <% end %>
